# cinema_dashboard

./: README.md  pyproject.toml  requirements.txt
pages/: streaming.py
tests/: test_streaming.py
tests/evals/: test_chat_evals.py
utils/: chat.py  streaming.py  ui.py
