[project]
name = "cinema-dashboard"
version = "1.2.3"
description = "A dashboard to watch cinema data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bandit==1.9.4",
    "beautifulsoup4>=4.14.3",
    "click>=8.4.1",
    "dagster>=1.13.6",
    "dagster-webserver>=1.13.6",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.16.4",
    "mypy>=2.1.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ruff==0.15.14",
    "streamlit>=1.57.0",
    "streamlit-calendar>=1.4.0",
    "streamlit-shortcuts>=1.2.1",
    "tabulate>=0.10.0",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short -m 'not evals'"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pandas",
]
markers = [
    "evals: deepeval LLM-judged tests (hit HF + Gemini, skipped by default)",
]

[dependency-groups]
dev = [
    # Pinned to 2.x — newer deepeval lines have tight pins (tabulate<0.10,
    # click<8.4) that conflict with this project's runtime deps.
    "deepeval>=4.0.4,<5",
    # deepeval 2.x imports ``langchain.schema`` at module load; that module was
    # removed in langchain 1.0, so pin to the last compatible series.
    # Lower bound 0.3 — earlier 0.0.x releases use @root_validator() without
    # ``skip_on_failure=True``, which pydantic 2.13 promoted from deprecation
    # to a hard error at class definition time.
    "langchain>=1.3.2,<2",
    # deepeval's pytest plugin imports ``llama_index.core.query_engine`` at
    # startup; that namespace landed in llama-index 0.10. Without a lower
    # bound uv picks the pre-namespace 0.9.x release and pytest fails to load.
    "llama-index>=0.14.22,<0.15",
    "ipykernel>=7.2.0",
]
